tests/NormalTests/paczka2/big_fuzzy/16624851.err
Error in line 3: LfIfQ3M S243 6,5
Error in line 9: LfIfQ3M S917 2,85
Error in line 10: A327 A327 6,7
Error in line 1: oXjRhOFh49 A327 82,0
Error in line 40: vkK A327 50,4
Error in line 37: jPuj4v8ua S243 91,2
Error in line 47: LfIfQ3M A327 68,4
Error in line 51: LfIfQ3M A927 644,4
Error in line 53: LfIfQ3M S243 92,3
Error in line 68: A3H7 S917 4H,3
Error in line 64: 3lXfee A927 0,0
Error in line 72: 3lXfee A327 87,0
Error in line 63: A327 A927 87,1
Error in line 97: vkK A327 91,1
Error in line 79: A327 S917 154,8
Error in line 98: vkK S917 57,6
Error in line 94: oXjRhOFh49 S243 91,7
Error in line 115: jsF2gVwXz S243 30,2
Error in line 118: LfIfQ3M A927 124,3
Error in line 131: jPuj4v8ua A327 72,3
Error in line 142: vkK A327 63,1
Error in line 153: jsF2gVwXz A927 -1,6
Error in line 144: jsF2gVwXz A927 6,3
Error in line 161: jsF2gVwXz S243 64,8
Error in line 186: 3lXfee S917 29,8
Error in line 171: jPuj4v8ua A927 80,4
Error in line 209: 3lXfee A927 39,3
Error in line 220: oXjRhOFh49 S243 16,8
Error in line 202: LfIfQ3M S243 13,7
Error in line 223: 3lXfee A927 73,2
Error in line 226: LfIfQ3M S917 93,2
Error in line 228: jPuj4v8ua S917 232,4
Error in line 238: 3lXfee A327 66,7
Error in line 241: jPuj4v8ua S243 84,0
Error in line 240: 3lXfee A927 45,9
Error in line 217: A327 S243 360,8
